kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-demo-deployment
  labels:
    group: moz-poc
spec:
  selector:
    matchLabels:
      app: secrets-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: secrets-demo
        group: moz-poc
        tier: vertrouwd
        ingress-controller-frontoffice-policy: allow
        egress-frontoffice-policy: allow
        access-to-connectionpool: allow
    spec:
      containers:
        - name: secrets-demo-container
          image: " ghcr.io/hoangchu/secrets-demo:12a3aedd8c5e80bd0925019ccd9171d08fc12385"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 550m
              memory: 550Mi
          livenessProbe:
            initialDelaySeconds: 3
            timeoutSeconds: 3
            tcpSocket:
              port: 8080
          readinessProbe:
            initialDelaySeconds: 3
            timeoutSeconds: 3
            tcpSocket:
              port: 8080
      imagePullSecrets:
        - name: ghcr-pull-secret
