kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: secrets-demo-service
  labels:
    app: secrets-demo-service
    group: moz-poc
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: secrets-demo
